--- a/dashboard/views/utils/notif.ejs
+++ b/dashboard/views/utils/notif.ejs
@@ -35,10 +35,8 @@ function getTextColor(type) {
 %>
 
 <div class="all-notif fixed bottom-4 flex flex-col right-3 space-y-2">
-    <% req.app.locals.messages.forEach((message, i) => { %>
-
-        <% req.app.locals.messages = req.app.locals.messages.filter(msg => msg !== message) %>
-
+    <% res.app.locals.messages.forEach((message, i) => { %>
+        <% res.app.locals.messages = res.app.locals.messages.filter(msg => msg !== message) %>
         <div class="notif notif-<%= i %> text-center ml-auto animate-rightToLeft">
             <div class="p-2 <%= getBgColor(message.type) %> items-center text-white leading-none flex lg:inline-flex">
                 <span class="flex rounded-full uppercase px-2 py-1 text-xs font-bold mr-3">
