--- a/dashboard/public/styles/tailwind.css
+++ b/dashboard/public/styles/tailwind.css
@@ -45,7 +45,7 @@ html, body {
   
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #4F545C;
+    background: #3e4046;
 }
   
 /* Handle */
