--- a/dashboard/views/index.ejs
+++ b/dashboard/views/index.ejs
@@ -32,10 +32,10 @@
                     <div class="group flex items-center justify-center">
                         <div class="grid grid-cols-1 lg:grid-cols-2 bgTheme h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
                             <div class="flex items-center justify-center">
-                                <p><%= res.__("dashboard.index.img") %></p>
+                                <p class="text-black dark:text-white"><%= res.__("dashboard.index.img") %></p>
                             </div>
                             <div class="flex items-center justify-center">
-                                <p><%= res.__("dashboard.index.littleText") %></p>
+                                <p class="text-black dark:text-white"><%= res.__("dashboard.index.littleText") %></p>
                             </div>
                         </div>
                     </div>
@@ -45,10 +45,10 @@
                     <div class="group flex items-center justify-center">
                         <div class="grid grid-cols-1 lg:grid-cols-2 bgTheme h-80 w-10/12 m-10 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md dark:group-hover:bg-gray-third group-hover:bg-white-third">
                             <div class="flex items-center justify-center">
-                                <p><%= res.__("dashboard.index.img") %></p>
+                                <p class="text-black dark:text-white"><%= res.__("dashboard.index.img") %></p>
                             </div>
                             <div class="flex items-center justify-center">
-                                <p><%= res.__("dashboard.index.littleText") %></p>
+                                <p class="text-black dark:text-white"><%= res.__("dashboard.index.littleText") %></p>
                             </div>
                         </div>
                     </div>
