--- a/dashboard/views/login.ejs
+++ b/dashboard/views/login.ejs
@@ -17,14 +17,7 @@
                 <div class="m-auto text-center">
                     <div class="group">
                         <i class="fab fa-discord font-bold group text-blurple block group-hover:animate-rotate360"></i>
-                        <a class="font-bold text-blurple" href='/api/discord/login'><%= res.__("dashboard.login.connectWithDiscord") %></a>
-                    </div>
-                    <div>
-                        <a class="font-bold text-transparent gradient-instagram">
-                            <i class="fab fa-instagram"></i>
-                            
-                            <%= res.__("dashboard.login.connectWithInsta") %>
-                        </a>
+                        <a class="font-bold text-blurple" href="/api/discord/login"><%= res.__("dashboard.login.connectWithDiscord") %></a>
                     </div>
                 </div>
             </div>
