[+] Add missing notifications

--- a/dashboard/views/games.ejs
+++ b/dashboard/views/games.ejs
@@ -13,6 +13,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div>
                 <div class="text-center">
                     <p class="dark:text-white text-black text-lg"><%= res.__("dashboard.games.info") %> <%= gameId %></p>
