--- a/dashboard/views/viewProfile.ejs
+++ b/dashboard/views/viewProfile.ejs
@@ -13,6 +13,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div>
                 <div class="text-center">
                     <p class="textTheme">Profile de ....</p>
