--- a/dashboard/views/privacy.ejs
+++ b/dashboard/views/privacy.ejs
@@ -7,6 +7,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div class="text-center">
                 <p class="textTheme">On stock pas vos datas</p>
             </div>
