--- a/dashboard/views/server.ejs
+++ b/dashboard/views/server.ejs
@@ -14,6 +14,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div>
                 <div class="text-center">
                     <div>
