--- a/dashboard/views/settings.ejs
+++ b/dashboard/views/settings.ejs
@@ -11,6 +11,8 @@
         <div>
             <%- include("utils/navbar") %> 
 
+            <%- include("utils/notif") %>
+
             <div>
                 <div class="group">
                     <div class="bgTheme m-8 rounded-3xl group-hover:transition duration-500 ease-in-out group-hover:rounded-md">
